--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   />
 
   <!-- Your custom CSS -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=2" />
 </head>
 
 <body>
